Added e2e test grades